Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/assert/DU2.out
DU2.java:14:9: compiler.err.var.might.already.be.assigned: i
1 error
